--- a/src/app/component/home/home.component.html
+++ b/src/app/component/home/home.component.html
@@ -1,4 +1,4 @@
-<app-toolbar></app-toolbar>
+<!-- <app-toolbar></app-toolbar> -->
 <img
   id="wizzinho"
   src="https://media1.giphy.com/media/fFr8K1qbbddzXWqrdl/200w.gif"
