--- a/src/app/component/soma/soma.component.html
+++ b/src/app/component/soma/soma.component.html
@@ -1,4 +1,4 @@
-<app-toolbar></app-toolbar>
+<!-- <app-toolbar></app-toolbar> -->
 <div class="container">
   <div class="tema">
     <h2 class="example-h2" [class.mudaTemaTitulo]="ligado == 'Claro'">Tema:</h2>
