--- a/src/app/component/toolbar/toolbar.component.scss
+++ b/src/app/component/toolbar/toolbar.component.scss
@@ -3,6 +3,7 @@ mat-toolbar {
   border-bottom: 3px solid blueviolet;
   border-radius: 20px;
   justify-content: center;
+  min-width: 875px;
 }
 
 mat-toolbar, a {
