--- a/src/app/component/toolbar/toolbar.component.html
+++ b/src/app/component/toolbar/toolbar.component.html
@@ -1,12 +1,12 @@
 <mat-toolbar>
   <a mat-flat-button routerLink="/home"
     ><i class="fi fi-bs-home"></i>
-    Home
+  Home
   </a>
 
   <a mat-flat-button routerLink="/soma"
-    ><i class="fi fi-sr-apps-add"></i>
-    Adição
+  ><i class="fi fi-sr-apps-add"></i>
+  Adição
   </a>
 
   <a mat-flat-button routerLink="/usuarios"
@@ -15,7 +15,7 @@
   </a>
 
   <a mat-flat-button routerLink="/login"
-    ><i class="fi fi-bs-sign-out-alt"></i>
+    (click)="removeStatusLogin()"><i class="fi fi-bs-sign-out-alt"></i>
     Sair
   </a>
 </mat-toolbar>
