--- a/src/app/component/home/home.component.html
+++ b/src/app/component/home/home.component.html
@@ -10,3 +10,8 @@
   módulos de <strong>Login</strong>, <strong>Home</strong>,
   <strong>Adição</strong>, <strong>Usuários</strong> e <strong>Sair</strong>.
 </p>
+
+<!-- <img
+  src="/src/app/img/03.gif"
+  alt="Wizzinho!"
+/> -->
