--- a/src/app/component/home/home.component.scss
+++ b/src/app/component/home/home.component.scss
@@ -1,6 +1,6 @@
-app-toolbar {
-  width: 100%;
-}
+// app-toolbar {
+//   width: 100%;
+// }
 
 #wizzinho {
   margin: auto;
@@ -18,7 +18,7 @@ p {
   border-top: 3px solid blueviolet;
   border-bottom: 3px solid blueviolet;
   border-radius: 20px;
-  min-width: 875px;
+  // min-width: 875px;
   position: relative;
 }
 
