--- a/src/app/component/usuarios/usuarios.component.html
+++ b/src/app/component/usuarios/usuarios.component.html
@@ -5,7 +5,7 @@
 </div>
 <mat-grid-list cols="2" rowHeight="2:1">
   <ul>
-    <li *ngFor="let usuario of users">
+    <li data-test="user-el" *ngFor="let usuario of users">
       <mat-grid-tile>
         <mat-card class="example-card">
           <mat-card-title-group>
